--- a/.github/workflows/prefect-worker.yml
+++ b/.github/workflows/prefect-worker.yml
@@ -23,7 +23,7 @@ jobs:
           pip install prefect
 
       - name: Prefect login to Cloud
-        run: prefect cloud login -k ${{ secrets.PREFECT_API_KEY }}
+        run: prefect cloud login --key ${{ secrets.PREFECT_API_KEY }} --workspace "alhousseynou/default" 
 
       - name: Deploy the Prefect flow to Prefect Cloud
         run: prefect deploy
