fix: Github action path

--- a/prefect.yaml
+++ b/prefect.yaml
@@ -15,7 +15,7 @@ push: null
 # pull section allows you to provide instructions for cloning this project in remote locations
 pull:
 - prefect.deployments.steps.set_working_directory:
-    directory: E:\projects\notification-pass-logement
+    directory: notification-pass-logement
 
 # the deployments section allows you to provide configuration for deploying flows
 deployments:
