--- a/.github/workflows/prefect-worker.yml
+++ b/.github/workflows/prefect-worker.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install prefect
+          pip install -r requirements.txt
 
       - name: Prefect login to Cloud
         run: prefect cloud login --key ${{ secrets.PREFECT_API_KEY }} --workspace "alhousseynou/default" 
